--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
           <h2>Derniers articles</h2>
           <hr>
         </header>
-        <div class="card-deck containerCardDeck mx-auto w-75">
+        <div class="card-deck containerCardDeck mx-auto w-75 col-8">
           <div class="card carte">
             <img class="card-img-top carteImage" src="images/12MonkeysCover.png"
               alt="L'armée des 12 singes">
@@ -141,7 +141,7 @@
             </div>
           </div>
         </div>
-        <div class="card-deck containerCardDeck mx-auto w-75">
+        <div class="card-deck containerCardDeck mx-auto w-75 col-8">
           <div class="card carte">
             <img class="card-img-top carteImage" src="images/AttackOnTitanSeason1Cover.jpg"
               alt="L'Attaque des Titans">
@@ -174,7 +174,7 @@
             </div>
           </div>
         </div>
-        <div class="card-deck containerCardDeck mx-auto w-75">
+        <div class="card-deck containerCardDeck mx-auto w-75 col-8">
           <div class="card carte">
             <img class="card-img-top carteImage" src="images/DonnieDarkoCover.jpg"
               alt="Donnie Darko">
@@ -238,33 +238,28 @@
         <ol class="container-fluid">
           <li class="filmsBoxOffice row">
               <div class="col-1 px-0 mx-0">1.</div>
-              <div class="col-6 px-0 mx-0">Film random</div>
-              <div class="col-1 px-0 mx-0">-</div>
-              <div class="col-4 px-0 mx-0">230 456</div>
+              <div class="col-sm-11 col-md-11 col-lg-6 px-0 mx-0">Film random</div>
+              <div class="col-lg-4 col-md-12 col-sm-12 px-0 mx-auto text-center">230 456</div>
           </li>
           <li class="filmsBoxOffice row">
               <div class="col-1 px-0 mx-0">2.</div>
-              <div class="col-6 px-0 mx-0">Un autre film</div>
-              <div class="col-1 px-0 mx-0">-</div>
-              <div class="col-4 px-0 mx-0">165 432</div>
+              <div class="col-sm-11 col-md-11 col-lg-6 px-0 mx-0">Un autre film</div>
+              <div class="col-lg-4 col-md-12 col-sm-12 px-0 mx-auto text-center">165 432</div>
           </li>
           <li class="filmsBoxOffice row">
               <div class="col-1 px-0 mx-0">3.</div>
-              <div class="col-6 px-0 mx-0">Encore un</div>
-              <div class="col-1 px-0 mx-0">-</div>
-              <div class="col-4 px-0 mx-0">120 456</div>
+              <div class="col-sm-11 col-md-11 col-lg-6 px-0 mx-0">Encore un</div>
+              <div class="col-lg-4 col-md-12 col-sm-12 px-0 mx-auto text-center">120 456</div>
           </li>
           <li class="filmsBoxOffice row">
               <div class="col-1 px-0 mx-0">4.</div>
-              <div class="col-6 px-0 mx-0">Mission Impossible</div>
-              <div class="col-1 px-0 mx-0">-</div>
-              <div class="col-4 px-0 mx-0">100 456</div>
+              <div class="col-sm-11 col-md-11 col-lg-6 px-0 mx-0">Mission Impossible</div>
+              <div class="col-lg-4 col-md-12 col-sm-12 px-0 mx-auto text-center">100 456</div>
           </li>
           <li class="filmsBoxOffice row">
               <div class="col-1 px-0 mx-0">5.</div>
-              <div class="col-6 px-0 mx-0">Les vieux fourneaux</div>
-              <div class="col-1 px-0 mx-0">-</div>
-              <div class="col-4 px-0 mx-0">125 432</div>
+              <div class="col-sm-11 col-md-11 col-lg-6 px-0 mx-0">Les vieux fourneaux</div>
+              <div class="col-lg-4 col-md-12 col-sm-12 px-0 mx-auto text-center">125 432</div>
           </li>
         </ol>
       </div>
