--- a/contact.html
+++ b/contact.html
@@ -67,33 +67,36 @@
             </div>
         </nav>
     </header>
-    <section id="contact" class="container-fluid bg-light">
+    <section id="contact" class="container-fluid page-contact">
         <div class="row w-75 mx-auto py-4">
-            <div class="col-lg-12">
-                <h2>Contact</h2>
-            </div>
-            <div class="col-xs-12 col-lg-8 py-4">
-                <h3 class="h-25">Nous contacter</h3>
-                <p>Si vous souhaitez nous contacter, soumettre vos suggestions ou devenir contributeurs</p>
+            <div class="col-xs-12 col-lg-8 py-4 barre">
+                <div class="contactez">
+                    <h2 class="d-flex justify-content-center">Contactez-nous</h2>
+                    <p class="contributeur text-center">Et devenez contributeur du blog</p>
+                </div>
                 <form class="my-4">
                     <div class="form-group my-2">
                         <input type="email" class="form-control  my-4" id="mail" aria-describedby="emailHelp"
-                            placeholder="Your name">
+                            placeholder="Nom">
                         <input type="text" class="form-control my-4" id="address" aria-describedby="emailHelp"
-                            placeholder="Your email">
-                        <textarea class="form-control my-4" id="message" placeholder="Your message"></textarea>
+                            placeholder="E-mail">
+                        <textarea class="form-control my-4" id="message" placeholder="Message"></textarea>
                     </div>
-                    <button type="submit" class="btn btn-primary">Submit</button>
+                    <button type="submit" class="btn bouton-page-contact">Envoyer</button>
                 </form>
             </div>
-            <div class="col-xs-12 col-lg-4 py-4">
-                <h3 class="h-25">S'abonner à la newsletter</h3>
-                <p>Pour être informé(e) des dernières publications</p>
+            <div class="col-xs-12 col-lg-3 py-4 mx-2">
+                <div class="contactez">
+                    <h2 class="text-center">Abonnez-vous à la newsletter</h2>
+                    <p class="contributeur text-center">#Cinéma #Séries #DessinsAnimés...</p>
+                    <p class="contributeur text-center">Tous les mercredis, recevez le
+                        meilleur de la pop culture dans votre boîte e-mail !</p>
+                </div>
                 <form>
                     <div class="form-group ">
-                        <input type="text" class="form-control my-4" id="mail" aria-describedby="emailHelp" placeholder="Your email">
+                        <input type="text" class="form-control my-4" id="mail" aria-describedby="emailHelp" placeholder="E-mail">
                     </div>
-                    <button type="submit" class="btn btn-primary">Submit</button>
+                    <button type="submit" class="btn bouton-page-contact">Je m'abonne</button>
                 </form>
             </div>
         </div>
