--- a/article.html
+++ b/article.html
@@ -219,14 +219,13 @@
           </div>
         </div>
       </article>
-      <aside class="d-block d-sm-block d-md-none offset-1 col-10 bg-secondary aside-cache mb-4">
+      <aside class="d-block d-sm-block d-md-none offset-1 col-10 aside-cache mb-4">
         <div class="row">
           <div class="col-xs-12 text-center mx-4 mt-4">
-            <p class="text-left">À propos de l'auteur</p>
-            <hr />
+            <p class="text-left titre-aside">À propos de l'auteur</p>
             <img alt="text" class="rounded-circle img-fluid text-center" src="images/ryan.jpg">
             <p class="mt-3 titreArticle">Michel Vaillant</p>
-            <small class="mt-3 petits-tittres">Rédacteur en chef</small>
+            <small class="mt-3 petits-titres-aside">Rédacteur en chef</small>
             <p class="presentationAuteur text-justify mt-3">Michel Vaillant, né à London, en Ontario, a été élevé dans
               une famille mormone. Son père est d'origine canadien-français. Il se destine d'abord à une carrière de
               danseur avant d'être engagé en 1993, à l'âge de 12 ans, sur The Mickey Mouse Club (All New Mickey Mouse
@@ -238,14 +237,14 @@
 
     <!-- Aside-->
 
-    <aside class="d-none d-sm-none d-md-block bg-secondary">
+    <aside class="d-none d-sm-none d-md-block">
       <div class="container">
         <div class="row">
           <div class="col-xs-12 text-center mx-4 mt-4">
             <p class="text-left titre-aside">À propos de l'auteur</p>
             <img alt="text" class="rounded-circle img-fluid text-center" src="images/ryan.jpg">
             <p class="mt-3 titreArticle">Michel Vaillant</p>
-            <small class="mt-3 petits-tittres">Rédacteur en chef</small>
+            <small class="mt-3 petits-titres-aside">Rédacteur en chef</small>
             <p class="presentationAuteur text-justify mt-3">Michel Vaillant, né à London, en Ontario, a été élevé dans
               une famille mormone. Son père est d'origine canadien-français. Il se destine d'abord à une carrière de
               danseur avant d'être engagé en 1993, à l'âge de 12 ans, sur The Mickey Mouse Club (All New Mickey Mouse
@@ -254,28 +253,28 @@
           <div class="d-none d-sm-block mx-4 mt-4">
             <p class="titre-aside">Du même auteur</p>
             <p class="titreArticle">[Critique] Titre de l'article</p>
-            <small class="petits-tittres">Publié le 22/04/2018</small>
+            <small class="petits-titres-aside">Publié le 22/04/2018</small>
             <p class="titreArticle">[Dossier] Titre de l'article</p>
-            <small class="petits-tittres">Publié le 22/04/2018</small>
+            <small class="petits-titres-aside">Publié le 22/04/2018</small>
             <p class="titreArticle">[Interview] Titre de l'article</p>
-            <small class="petits-tittres">Publié le 22/04/2018</small>
+            <small class="petits-titres-aside">Publié le 22/04/2018</small>
             <p class="titreArticle">[Critique] Titre de l'article</p>
-            <small class="petits-tittres">Publié le 22/04/2018</small>
+            <small class="petits-titres-aside">Publié le 22/04/2018</small>
             <p class="titreArticle">[Critique] Titre de l'article</p>
-            <small class="petits-tittres">Publié le 22/04/2018</small>
+            <small class="petits-titres-aside">Publié le 22/04/2018</small>
           </div>
           <div class="d-none d-sm-block mx-4 mt-4">
             <p class="titre-aside">Articles similaires</p>
             <p class="titreArticle">[Critique] Titre de l'article</p>
-            <small class="petits-tittres">Publié le 22/04/2018</small>
+            <small class="petits-titres-aside">Publié le 22/04/2018</small>
             <p class="titreArticle">[Dossier] Titre de l'article</p>
-            <small class="petits-tittres">Publié le 22/04/2018</small>
+            <small class="petits-titres-aside">Publié le 22/04/2018</small>
             <p class="titreArticle">[Interview] Titre de l'article</p>
-            <small class="petits-tittres">Publié le 22/04/2018</small>
+            <small class="petits-titres-aside">Publié le 22/04/2018</small>
             <p class="titreArticle">[Critique] Titre de l'article</p>
-            <small class="petits-tittres">Publié le 22/04/2018</small>
+            <small class="petits-titres-aside">Publié le 22/04/2018</small>
             <p class="titreArticle">[Critique] Titre de l'article</p>
-            <small class="petits-tittres">Publié le 22/04/2018</small>
+            <small class="petits-titres-aside">Publié le 22/04/2018</small>
           </div>
         </div>
       </div>
