--- a/index.html
+++ b/index.html
@@ -81,12 +81,21 @@
       <div class="carousel-inner">
         <div class="carousel-item active">
           <img class="d-block img-fluid w-100" src="images/au_poste-banner.jpg" alt="First slide">
+          <div class="carousel-caption d-none d-md-block">
+              <h5>Au poste : la nouvelle comédie de Quentin Dupieux</h5>
+          </div>
         </div>
         <div class="carousel-item">
           <img class="d-block img-fluid w-100" src="images/peakyblinders2.jpg" alt="Third slide">
+          <div class="carousel-caption d-none d-md-block">
+              <h5>Peaky Blinders : que nous reserve la prochaine saison ?</h5>
+          </div>
         </div>
         <div class="carousel-item">
           <img class="d-block img-fluid w-100" src="images/chihiro2-banner.jpg" alt="Second slide">
+          <div class="carousel-caption d-none d-md-block">
+              <h5>Miyazaki : retour sur une carrière</h5>
+          </div>
         </div>
       </div>
       <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
